--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
   "type": "commonjs",
   "dependencies": {
     "@gradio/client": "^1.15.4",
+    "@upstash/redis": "^1.35.1",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.6.0",
     "express": "^5.1.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "multer": "^2.0.1",
